--- a/myapp/templates/booking/booking_list.html
+++ b/myapp/templates/booking/booking_list.html
@@ -155,7 +155,6 @@
     <a href="{% url 'container_list' %}"><span class="icon">🚛</span> Container Hub</a>
     <a href="{% url 'driver_list' %}"><span class="icon">👥</span> Driver</a>
     <a href="{% url 'user_list' %}"><span class="icon">👤</span> User Hub</a>
-    <a href="#"><span class="icon">🔒</span> Security</a>
     <a href="#"><span class="icon">🔔</span> Notification</a>
     <div class="bottom-links">
       <a href="#"><span class="icon">⚙️</span> Settings</a>
@@ -177,8 +176,9 @@
               <strong>{{ booking.booking_number }}</strong>: {{ booking.origin }} to {{ booking.destination }}
             </span>
             <span>
-              <a href="{% url 'booking_update' booking.booking_id %}" class="btn btn-primary btn-sm">Edit</a>
-              <a href="{% url 'booking_delete' booking.booking_id %}" class="btn btn-danger btn-sm">Delete</a>
+                <a href="{% url 'booking_update' booking.pk %}" class="btn btn-primary btn-sm">Edit</a>
+                <a href="{% url 'booking_delete' booking.pk %}" class="btn btn-danger btn-sm">Delete</a>
+
             </span>
           </li>
         {% endfor %}
