--- a/myapp/templates/container/container_list.html
+++ b/myapp/templates/container/container_list.html
@@ -140,22 +140,10 @@
   </style>
 </head>
 <body>
-  <div class="sidebar">
-    <img src="{% static 'images/logo.png' %}" alt="Logo">
-    <a href="#"><span class="icon">🏠</span> Dashboard</a>
-    <a href="{% url 'customer_list' %}"><span class="icon">👤</span> Customer Hub</a>
-    <a href="{% url 'booking_list' %}"><span class="icon">📦</span> Booking Hub</a>
-    <a href="{% url 'container_list' %}" class="active"><span class="icon">🚛</span> Container Hub</a>
-    <a href="{% url 'driver_list' %}"><span class="icon">👥</span> Driver</a>
-    <a href="{% url 'user_list' %}"><span class="icon">👤</span> User Hub</a>
-    <a href="#"><span class="icon">🔔</span> Notification</a>
-    <div class="bottom-links">
-        <a href="#"><span class="icon">⚙️</span> Settings</a>
-        <a href="#"><span class="icon">🚪</span> Logout</a>
-    </div>
-  </div>
+{% include 'includes/sidebar.html' %}
 
-  <div class="content">
+
+<div class="content">
     <div class="header">
       <h1>Container Management</h1>
       <a href="{% url 'container_create' %}" class="add-button">Add Container</a>
