--- a/myapp/templates/booking/booking_form.html
+++ b/myapp/templates/booking/booking_form.html
@@ -167,15 +167,14 @@
       <div class="card-body">
         <form method="POST" class="form-horizontal">
           {% csrf_token %}
-            <div class="form-group">
-                <label for="id_booking_number_display">Booking Number
-                {{ form.booking_number }}
-                </label>
-            </div>
-            <div class="form-group">
-                <label for="id_created_by">Created by</label>
-                <input type="text" disabled="true" id="id_created_by" value="{{ request.user.username }}" readonly class="form-control" />
-            </div>
+          <div class="form-group">
+            <label for="id_booking_number">Booking Number</label>
+            <input type="text" id="id_booking_number" value="{{ form.booking_number.value }}" readonly class="form-control" />
+          </div>
+          <div class="form-group">
+            <label for="id_created_by">Created by</label>
+            <input type="text" disabled="true" id="id_created_by" value="{{ request.user.username }}" readonly class="form-control" />
+          </div>
           <div class="form-group">
             <label for="id_customer">Customer</label>
             {{ form.customer }}
